<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/backgroundColor"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@color/colorPrimary"
        android:padding="10dp"
        android:text="@string/pilih_media"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/backgroundColor"
        android:layout_marginBottom="18dp">

        <Button
            android:id="@+id/btn_galeri"
            android:text="@string/galeri"
            android:layout_weight="0.5"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/button_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_kamera"
            android:text="@string/kamera"
            android:layout_weight="0.5"
            android:backgroundTint="@color/button_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>