<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="kos"
            type="com.kelompok_a.tubes_sewa_kos.Kos" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/backgroundColor"
            tools:context=".InfoKosFragment">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/backgroundColor"
                android:layout_margin="42dp">

                <ImageView
                    android:id="@+id/profile_img"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/imageContentDesc"
                    app:srcCompat="@drawable/logokost" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/nama_kost"
                        android:textColor="?attr/textColor"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/text_nama_kos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:textColor="?attr/textColor" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/tipe_kost"
                        android:textColor="?attr/textColor"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/text_tipe_kos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:textColor="?attr/textColor"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/alamat_kost"
                        android:textColor="?attr/textColor"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/text_alamat_kos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:textColor="?attr/textColor"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/harga_kost"
                        android:textColor="?attr/textColor"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/text_harga_kos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:textColor="?attr/textColor"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="24dp">
                    <Button
                        android:id="@+id/back_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:layout_marginEnd="10dp"
                        android:backgroundTint="@color/button_cancel"
                        android:text="@string/kembali"/>
                    <Button
                        android:id="@+id/map_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:backgroundTint="@color/button_ok"
                        android:text="@string/lihat_di_peta"/>
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </ScrollView>
</layout>
