<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" >
    <data>
        <variable
            name="editProfileFragment"
            type="com.kelompok_a.tubes_sewa_kos.EditProfileFragment" />
        <variable
            name="user"
            type="com.kelompok_a.tubes_sewa_kos.User" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ProfileFragment">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="28dp"
                android:background="?attr/backgroundColor">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.MaterialComponents.Headline4"
                    android:gravity="center"
                    android:text="@string/edit_profile"
                    android:textColor="?attr/textColor"
                    android:layout_marginBottom="8dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:text="@string/nama_lengkap"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:textColor="?attr/textColor"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_nama"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:hint="@string/nama_lengkap"
                        android:textColor="?attr/textColor"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:text="@string/no_hp"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:textColor="?attr/textColor"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_no_hp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:hint="@string/no_hp"
                        android:textColor="?attr/textColor"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:text="@string/email"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:textColor="?attr/textColor"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:hint="@string/email"
                        android:textColor="?attr/textColor"
                        android:enabled="false"/>
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_marginTop="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/backgroundColor">

                    <Button
                        android:id="@+id/btn_cancel"
                        android:text="@string/batal"
                        android:layout_weight="0.5"
                        android:layout_marginEnd="10dp"
                        android:backgroundTint="@color/button_cancel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <Button
                        android:id="@+id/btn_edit"
                        android:text="@string/edit"
                        android:layout_weight="0.5"
                        android:backgroundTint="@color/button_ok"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </ScrollView>
</layout>
